added custom form

--- a/config.yml
+++ b/config.yml
@@ -1,4 +1,4 @@
 development:
-  password: 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
-  theme_id: "101919064214"
-  store: whitelotusx.myshopify.com
+  password: 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
+  theme_id: "102985105574"
+  store: firelotus.myshopify.com
